--- a/src/assets/work-templates/oculus-rift-onboarding-in-3d.html
+++ b/src/assets/work-templates/oculus-rift-onboarding-in-3d.html
@@ -1,6 +1,6 @@
 <div>
 
-  <p>
+  <p class="first-paragraph">
     It's so important to do something every day that will make you happy. If we're
     going to have animals around we all have to be concerned about them and take care
     of them. Happy painting, God bless. It's important to me that you're happy. You're
