adding more work display

--- a/src/assets/work-templates/oculus-rift-onboarding-in-3d.html
+++ b/src/assets/work-templates/oculus-rift-onboarding-in-3d.html
@@ -1,3 +1,24 @@
+<!-- <div class="work-image">
+  {{work.img}} work-image
+</div> -->
+<div class="work-entry">
+  <div class="work-metadata">
+    <div class="work-client">
+      {{work.client}}
+    </div>
+    <div class="work-tags">
+      <ul>
+        <li class="work-tag" *ngFor="let tag of work.tags">{{tag}}</li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="work-description">
+    {{work.description}}
+  </div>
+</div>
+
+
 <div>
 
   <p class="first-paragraph">
