update work details display

--- a/src/assets/work-templates/uw-oculus-rift-onboarding-in-3d.html
+++ b/src/assets/work-templates/uw-oculus-rift-onboarding-in-3d.html
@@ -1,21 +1,32 @@
-<!-- <div class="work-image">
-  {{work.img}} work-image
-</div> -->
 <div class="work-entry">
-  <div class="work-metadata">
-    <div class="work-client">
-      University of Washington
+
+  <div class="work-introduction">
+    <div class="work-metadata">
+      <div class="work-title">
+        Oculus Rift: Onboarding in a 3d Environment
+      </div>
+      <div class="work-tags">
+        <ul>
+          <li class="work-tag">UX Research</li>
+          <li class="work-tag">Research Planning</li>
+          <li class="work-tag">Usability Testing</li>
+        </ul>
+      </div>
     </div>
-    <div class="work-tags">
-      <ul>
-        <li class="work-tag">User Research</li>
-        <li class="work-tag">Usability Testing</li>
-        <li class="work-tag">Research Planning</li>
-      </ul>
+    <div class="work-description">
+      <p>
+        We'll play with clouds today. Maybe there was an old trapper that lived out here
+        and maybe one day he went to check his beaver traps, and maybe he fell into the
+        river and drowned. Trees grow however makes them happy. Nice little fluffy clouds
+        laying around in the sky being lazy. Maybe he has a little friend that lives right
+        over here. Nice little clouds playing around in the sky. And I know you're saying,
+        'Oh Bob, you've done it this time.' And you may be right. Everyone wants to enjoy
+        the good parts - but you have to build the framework first.
+      </p>
     </div>
   </div>
 
-  <div class="work-description">
+  <div class="work-body">
     <p>
       We'll play with clouds today. Maybe there was an old trapper that lived out here
       and maybe one day he went to check his beaver traps, and maybe he fell into the
@@ -26,21 +37,5 @@
       the good parts - but you have to build the framework first.
     </p>
   </div>
-</div>
 
-
-<div>
-  <p class="first-paragraph">
-    It's so important to do something every day that will make you happy. If we're
-    going to have animals around we all have to be concerned about them and take care
-    of them. Happy painting, God bless. It's important to me that you're happy. You're
-    meant to have fun in life.
-  </p>
-
-  <p>
-    It's so important to do something every day that will make you happy. If we're
-    going to have animals around we all have to be concerned about them and take care
-    of them. Happy painting, God bless. It's important to me that you're happy. You're
-    meant to have fun in life.
-  </p>
 </div>
