--- a/src/assets/work-templates/uw-secure-storage-in-shelters.html
+++ b/src/assets/work-templates/uw-secure-storage-in-shelters.html
@@ -1,25 +1,43 @@
-<div>
+<div class="work-entry">
 
-  <p>
-    secure-storage-for-homeless-shelters
-    It's so important to do something every day that will make you happy. If we're
-    going to have animals around we all have to be concerned about them and take care
-    of them. Happy painting, God bless. It's important to me that you're happy. You're
-    meant to have fun in life.
-  </p>
+  <div class="work-introduction">
+    <div class="work-metadata">
+      <div class="work-title">
+        Secure Storage for Tent Cities
+      </div>
+      <div class="work-tags">
+        <ul>
+          <li class="work-tag">UX Research</li>
+          <li class="work-tag">Research Planning</li>
+          <li class="work-tag">Information Architecture</li>
+          <li class="work-tag">Wireframing</li>
+          <li class="work-tag">Prototyping</li>
+        </ul>
+      </div>
+    </div>
+    <div class="work-description">
+      <p>
+        We'll play with clouds today. Maybe there was an old trapper that lived out here
+        and maybe one day he went to check his beaver traps, and maybe he fell into the
+        river and drowned. Trees grow however makes them happy. Nice little fluffy clouds
+        laying around in the sky being lazy. Maybe he has a little friend that lives right
+        over here. Nice little clouds playing around in the sky. And I know you're saying,
+        'Oh Bob, you've done it this time.' And you may be right. Everyone wants to enjoy
+        the good parts - but you have to build the framework first.
+      </p>
+    </div>
+  </div>
 
-  <p>
-    We'll play with clouds today. Maybe there was an old trapper that lived out here
-    and maybe one day he went to check his beaver traps, and maybe he fell into the
-    river and drowned. Trees grow however makes them happy.
-  </p>
-
-  <p>
-    Nice little fluffy clouds laying around in the sky being lazy. Maybe he has a
-    little friend that lives right over here. Nice little clouds playing around in
-    the sky. And I know you're saying, 'Oh Bob, you've done it this time.' And you
-    may be right. Everyone wants to enjoy the good parts - but you have to build the
-    framework first.
-  </p>
+  <div class="work-body">
+    <p>
+      We'll play with clouds today. Maybe there was an old trapper that lived out here
+      and maybe one day he went to check his beaver traps, and maybe he fell into the
+      river and drowned. Trees grow however makes them happy. Nice little fluffy clouds
+      laying around in the sky being lazy. Maybe he has a little friend that lives right
+      over here. Nice little clouds playing around in the sky. And I know you're saying,
+      'Oh Bob, you've done it this time.' And you may be right. Everyone wants to enjoy
+      the good parts - but you have to build the framework first.
+    </p>
+  </div>
 
 </div>
