design and text

--- a/src/assets/work-templates/uw-secure-storage-in-shelters.html
+++ b/src/assets/work-templates/uw-secure-storage-in-shelters.html
@@ -275,8 +275,8 @@
       </li>
       <li>
         Transitional communities must be able to move on short notice due to raids
-        or other relocation needs. They must be able to bring both their goods and
-        the means to store them.
+        or other relocation needs. Residents must be able to bring both their
+        goods and the means to store them.
       </li>
       <li>
         Jamie reiterated what our surveys found - residents have a lot of possessions,
