--- a/src/assets/work-templates/uw-secure-storage-in-shelters.html
+++ b/src/assets/work-templates/uw-secure-storage-in-shelters.html
@@ -1,34 +1,42 @@
 <div class="work-entry">
 
-  <div class="work-intro">
-    <div class="work-metadata">
-      <div class="work-title">
-        Secure Storage for Tent Cities
-      </div>
-        <ul class="work-tags">
-          <li class="work-tag">UX Research</li>
-          <li class="work-tag">Research Planning</li>
-          <li class="work-tag">Information Architecture</li>
-          <li class="work-tag">Wireframing</li>
-          <li class="work-tag">Prototyping</li>
-        </ul>
+  <div class="work-entry-header">
+    <div class="work-title">
+      Secure Storage for Tent Cities
     </div>
 
-    <div class="work-description">
-      <p>
-        During the course of HCDE's User-Centered Design class, I formed a group
-        with three others to find a problem and design a user-centered solution.
-        As we met and discussed the task, we found we were all motivated to
-        choose a problem that was socially-responsible, current,
-        under-investigated, and relevant to our local region.
-      </p>
-      <p>
-        We selected a project that could resolve social, economic, and health
-        hazards for thousands of Seattle's citizens: design a user-centered
-        solution to help homeless Seattle residents store their possessions
-        securely and hygienically.
-      </p>
+    <div class="sub">
+      <span class="helper"></span><span class="work-subtitle">
+        <!-- <p> -->
+          Design a user-centered solution to help homeless Seattle residents store
+          their possessions securely and hygienically.
+        <!-- </p> -->
+      </span>
     </div>
+  </div>
+
+  <ul class="work-tags">
+    <li class="work-tag">UX Research</li>
+    <li class="work-tag">Research Planning</li>
+    <li class="work-tag">Information Architecture</li>
+    <li class="work-tag">Wireframing</li>
+    <li class="work-tag">Prototyping</li>
+  </ul>
+
+  <div class="work-description">
+    <p>
+      During the course of HCDE's User-Centered Design class, I formed a group
+      with three others to find a problem and design a user-centered solution.
+      As we met and discussed the task, we found we were all motivated to
+      choose a problem that was socially-responsible, current,
+      under-investigated, and relevant to our local region.
+    </p>
+    <p>
+      We selected a project that could resolve social, economic, and health
+      hazards for thousands of Seattle's citizens: design a user-centered
+      solution to help homeless Seattle residents store their possessions
+      securely and hygienically.
+    </p>
   </div>
 
   <div class="work-body">
@@ -265,7 +273,7 @@
       Our guide, Jamie, provided us a tour and answered our questions in an interview.
       From our interview with Jamie, we gained a much deeper understanding of the
       relationship residents have with their belongings and storage. Some of our
-      key takeaways included:
+      takeaways included:
     </p>
 
     <ul class="work-body-list">
