update subtitle alignment with grid

--- a/src/assets/work-templates/uw-secure-storage-in-shelters.html
+++ b/src/assets/work-templates/uw-secure-storage-in-shelters.html
@@ -1,44 +1,43 @@
 <div class="work-entry">
+  <div class="work-intro">
+    <div class="work-header">
+      <div class="work-title">
+        Secure Storage for Tent Cities
+      </div>
 
-  <div class="work-entry-header">
-    <div class="work-title">
-      Secure Storage for Tent Cities
+      <div class="work-title-border"></div>
+
+      <div class="work-subtitle">
+        Design a user-centered solution to help homeless Seattle residents store
+        their possessions securely and hygienically.
+      </div>
     </div>
 
-    <div class="sub">
-      <span class="helper"></span><span class="work-subtitle">
-        <!-- <p> -->
-          Design a user-centered solution to help homeless Seattle residents store
-          their possessions securely and hygienically.
-        <!-- </p> -->
-      </span>
+    <ul class="work-tags">
+      <li class="work-tag">UX Research</li>
+      <li class="work-tag">Research Planning</li>
+      <li class="work-tag">Information Architecture</li>
+      <li class="work-tag">Wireframing</li>
+      <li class="work-tag">Prototyping</li>
+    </ul>
+
+    <div class="work-description">
+      <p>
+        During the course of HCDE's User-Centered Design class, I formed a group
+        with three others to find a problem and design a user-centered solution.
+        As we met and discussed the task, we found we were all motivated to
+        choose a problem that was socially-responsible, current,
+        under-investigated, and relevant to our local region.
+      </p>
+      <p>
+        We selected a project that could resolve social, economic, and health
+        hazards for thousands of Seattle's citizens: design a user-centered
+        solution to help homeless Seattle residents store their possessions
+        securely and hygienically.
+      </p>
     </div>
+
   </div>
-
-  <ul class="work-tags">
-    <li class="work-tag">UX Research</li>
-    <li class="work-tag">Research Planning</li>
-    <li class="work-tag">Information Architecture</li>
-    <li class="work-tag">Wireframing</li>
-    <li class="work-tag">Prototyping</li>
-  </ul>
-
-  <div class="work-description">
-    <p>
-      During the course of HCDE's User-Centered Design class, I formed a group
-      with three others to find a problem and design a user-centered solution.
-      As we met and discussed the task, we found we were all motivated to
-      choose a problem that was socially-responsible, current,
-      under-investigated, and relevant to our local region.
-    </p>
-    <p>
-      We selected a project that could resolve social, economic, and health
-      hazards for thousands of Seattle's citizens: design a user-centered
-      solution to help homeless Seattle residents store their possessions
-      securely and hygienically.
-    </p>
-  </div>
-
   <div class="work-body">
 
     <h2 class="work-body-h2">
