more updates to work

--- a/src/assets/work-templates/uw-secure-storage-in-shelters.html
+++ b/src/assets/work-templates/uw-secure-storage-in-shelters.html
@@ -8,7 +8,7 @@
       <div class="work-title-border"></div>
 
       <div class="work-subtitle">
-        Design a user-centered solution to help homeless Seattle residents store
+        Designing a user-centered solution to help homeless Seattle residents store
         their possessions securely and hygienically.
       </div>
     </div>
