lots of style cleanup

--- a/src/assets/work-templates/uw-secure-storage-in-shelters.html
+++ b/src/assets/work-templates/uw-secure-storage-in-shelters.html
@@ -9,7 +9,7 @@
 
       <div class="work-subtitle">
         Designing a user-centered solution to help homeless Seattle residents store
-        their possessions securely and hygienically.
+        their possessions securely and sustainably.
       </div>
     </div>
 
@@ -23,17 +23,19 @@
 
     <div class="work-description">
       <p>
-        During the course of HCDE's User-Centered Design class, I formed a group
-        with three others to find a problem and design a user-centered solution.
-        As we met and discussed the task, we found we were all motivated to
-        choose a problem that was socially-responsible, current,
-        under-investigated, and relevant to our local region.
+        In September 2017, I joined the University of Washington's HCDE
+        program, and began my first core class: a foundational user-centered
+        design course. I formed a group with three others to find a problem and
+        design a user-centered solution. As we met and began to discuss the
+        task, we found we were all motivated to choose a problem that was
+        socially-responsible, current, under-investigated, and relevant to our
+        local region.
       </p>
       <p>
         We selected a project that could resolve social, economic, and health
         hazards for thousands of Seattle's citizens: design a user-centered
         solution to help homeless Seattle residents store their possessions
-        securely and hygienically.
+        securely and sustainably.
       </p>
     </div>
 
@@ -45,27 +47,29 @@
     </h2>
 
     <p>
-      After selecting our opportunity space - aiding homeless residents of
-      Seattle - we spent more time identifying a specific focus. To do so, we
-      began with secondary-source and literature review.
+      At the outset of the project, our opportunity space was broad: we wanted
+      to look at solutions that would in some way address homelessness in
+      Seattle. So our first task was to narrow our scope. To do so, we began a
+      brief literature review.
     </p>
 
     <p>
-      Seattle's effort to address homelessness is significant. It was a primary
-      discussion point during the recent mayoral race, so it was spotlighted by
-      local media. Our literature review focused on the long-form investigative
-      pieces across Seattle's shelters and tent cities. In the course of my
-      review, <a class="work-body-link" target="_blank" href="https://www.evernote.com/shard/s55/sh/399d9d7c-0076-4bc3-8724-f5059f4f0e54/75be081166e1709a">
+      Seattle's effort to address homelessness is significant - so much so that
+      in late 2017, it was a primary topic of the ongoing mayoral race between
+      Jenny Durkan and Cary Moon. Fortunately for us, this meant that it was
+      also heavily spotlighted by local media. Our literature review focused on
+      the long-form investigative pieces across Seattle's shelters and tent
+      cities. In the course of my review, <a class="work-body-link" target="_blank" href="https://www.evernote.com/shard/s55/sh/399d9d7c-0076-4bc3-8724-f5059f4f0e54/75be081166e1709a">
       I put together many notes like this one</a>, aggregating and highlighting
       key opportunities that we could further investigate.
     </p>
 
     <p>
-      We simultaneously began outreach to experts in the field. I reached out to
-      <a class="work-body-link" target="_blank" href="https://en.wikipedia.org/wiki/Barbara_Poppe">
+      During our lit review, we also began outreach to experts in the field. I
+      wrote to <a class="work-body-link" target="_blank" href="https://en.wikipedia.org/wiki/Barbara_Poppe">
       Barbara Poppe</a>, an appointee by President Obama to the U.S. Interagency
       Council on Homelessness. I began a discussion with her about our group's
-      issue area and intent that helped inform our selection. She helped to
+      issue area and intent that helped inform our focus. She helped to
       validate and confirm our trajectory early on in the project. We also
       contacted University of Washington professors in the school of public
       health to hold informal interviews about our progress.
@@ -82,45 +86,75 @@
 
     <p>
       Seattle presents many distinct populations of homeless residents who are
-      relying on different types of housing programs for support.
+      relying on a variety of housing programs for support.
     </p>
 
-    <a
+    <!-- <a
       target="_blank"
       href="https://www.dropbox.com/s/18906e12rg5c2li/homeless-housing-programs.png?dl=0">
       <img
         src="../assets/images/work/uw-secure-storage-in-shelters/homeless-housing-programs.png"
         class="work-body-image border"
         alt="the four types of homeless housing programs">
-    </a>
+    </a> -->
+
+    <figure class="work-body-figure">
+      <img
+        src="../assets/images/work/uw-secure-storage-in-shelters/homeless-housing-programs.png"
+        class="work-body-image border"
+        alt="The four types of homeless housing programs">
+      <figcaption class="work-body-image-caption">
+        The four types of homeless housing programs in Seattle
+      </figcaption>
+    </figure>
 
     <p>
-      These housing programs differ vastly across different types of shelter,
-      staff support, amenities, and other factors. Understanding this complex
-      network of housing programs was a critical first step to designing a viable
-      solution.
+      These housing programs differ across the types of shelter, staff support,
+      amenities, and other factors of care provided. Understanding this complex
+      network of housing programs was a critical first step to designing a
+      viable solution.
     </p>
 
     <p>
-      In addition, we investigated the budgetary resources available in Seattle.
-      The resources here, like in many cities, are scarce.
+      Beyond existing housing programs, we also wanted to understand the
+      financial resources that the city puts towards homelessness. We
+      investigated how the budgetary resources are organized in Seattle. The
+      resources here, like in many cities, are scarce. But understanding the
+      financial context was critical to designing a realistic solution.
     </p>
 
-    <a
+    <!-- <a
       target="_blank"
       href="https://www.dropbox.com/s/pxpny3x6ldeahjt/homelessness-budgets.jpeg?dl=0">
       <img
         src="../assets/images/work/uw-secure-storage-in-shelters/homelessness-budgets.jpeg"
         class="work-body-image border"
         alt="the housing program budget">
-    </a>
+    </a> -->
+
+    <figure class="work-body-figure">
+      <img
+        src="../assets/images/work/uw-secure-storage-in-shelters/homelessness-budgets.jpeg"
+        class="work-body-image border"
+        alt="The homelessness spending budget in Seattle">
+      <figcaption class="work-body-image-caption">
+        The homelessness spending budget in Seattle
+      </figcaption>
+    </figure>
 
     <p>
       Through literature review and secondary-source interviews, we came to align
       ourselves with a budgetary concept of <a class="work-body-link" target="_blank" href="https://www.desc.org/what-we-do/housing/housing-first/">
-      housing first</a> - the idea that the overwhelming majority of funds should
-      be put towards the creation of permanent housing solutions rather than
-      stop-gap measures.
+      housing first</a> - the idea that the overwhelming majority of city funds
+      should be put towards the creation of permanent housing solutions rather
+      than stop-gap measures.
+    </p>
+
+    <p>
+      As we progressed, we often asked ourselves, "is this solution worth more
+      than a single permanent home?" Prioritizing "housing first," we knew our
+      solution would have to use resources responsibly - either through a low
+      cost or through an easy method of scaling the resources required.
     </p>
 
     <h2 class="work-body-h2">
@@ -128,11 +162,10 @@
     </h2>
 
     <p>
-      As we researched existing solutions across this domain, we found that most
-      of the designed solutions didn't demonstrate an adequate understanding of
-      the complexity of the system. Many failed to address the wide differences
-      among different types of shelters or employed costly materials that failed
-      to align with the resource scarcity in the system.
+      As we researched existing solutions across the domain, we found that most
+      of the designed solutions didn't account for the wide variety of housing
+      programs that exist. Existing solutions also frequently employed costly
+      materials or failed to align with the resource scarcity of the system.
     </p>
 
     <a
