align work images under fig-figcaption setup looking ahead to abstract component

--- a/src/assets/work-templates/uw-secure-storage-in-shelters.html
+++ b/src/assets/work-templates/uw-secure-storage-in-shelters.html
@@ -89,22 +89,15 @@
       relying on a variety of housing programs for support.
     </p>
 
-    <!-- <a
-      target="_blank"
-      href="https://www.dropbox.com/s/18906e12rg5c2li/homeless-housing-programs.png?dl=0">
-      <img
-        src="../assets/images/work/uw-secure-storage-in-shelters/homeless-housing-programs.png"
-        class="work-body-image border"
-        alt="the four types of homeless housing programs">
-    </a> -->
-
     <figure class="work-body-figure">
-      <img
-        src="../assets/images/work/uw-secure-storage-in-shelters/homeless-housing-programs.png"
-        class="work-body-image border"
-        alt="The four types of homeless housing programs">
+      <a target="_blank" href="https://www.dropbox.com/s/blttl2cqo2mbaiy/homeless-housing-programs.png?dl=0">
+        <img
+          src="../assets/images/work/uw-secure-storage-in-shelters/homeless-housing-programs.png"
+          class="work-body-image border"
+          alt="The four types of homeless housing programs">
+      </a>
       <figcaption class="work-body-image-caption">
-        The four types of homeless housing programs in Seattle
+        The four types of homeless housing programs in Seattle.
       </figcaption>
     </figure>
 
@@ -123,20 +116,13 @@
       financial context was critical to designing a realistic solution.
     </p>
 
-    <!-- <a
-      target="_blank"
-      href="https://www.dropbox.com/s/pxpny3x6ldeahjt/homelessness-budgets.jpeg?dl=0">
-      <img
-        src="../assets/images/work/uw-secure-storage-in-shelters/homelessness-budgets.jpeg"
-        class="work-body-image border"
-        alt="the housing program budget">
-    </a> -->
-
     <figure class="work-body-figure">
-      <img
-        src="../assets/images/work/uw-secure-storage-in-shelters/homelessness-budgets.jpeg"
-        class="work-body-image border"
-        alt="The homelessness spending budget in Seattle">
+      <a target="_blank" href="https://www.dropbox.com/s/pxpny3x6ldeahjt/homelessness-budgets.jpeg?dl=0">
+        <img
+          src="../assets/images/work/uw-secure-storage-in-shelters/homelessness-budgets.jpeg"
+          class="work-body-image border"
+          alt="The homelessness spending budget in Seattle">
+      </a>
       <figcaption class="work-body-image-caption">
         The homelessness spending budget in Seattle
       </figcaption>
@@ -168,14 +154,15 @@
       materials or failed to align with the resource scarcity of the system.
     </p>
 
-    <a
-      target="_blank"
-      href="https://www.dropbox.com/s/upvwaf91xdx7d9y/hope-lockers.jpg?dl=0">
+    <figure class="work-body-figure">
       <img
         src="../assets/images/work/uw-secure-storage-in-shelters/hope-lockers.jpg"
         class="work-body-image border"
         alt="HOPE Lockers">
-    </a>
+      <figcaption class="work-body-image-caption">
+        The H.O.P.E. lockers in Salt Lake City
+      </figcaption>
+    </figure>
 
     <p>
       The H.O.P.E. lockers, shown above, cost $10,000 to build. The funds were
@@ -184,14 +171,15 @@
       cost each month onward.
     </p>
 
-    <a
-      target="_blank"
-      href="https://www.dropbox.com/s/qxdt57ke62nhd85/denver-lockers.jpg?dl=0">
+    <figure class="work-body-figure">
       <img
         src="../assets/images/work/uw-secure-storage-in-shelters/denver-lockers.jpg"
         class="work-body-image border"
         alt="Denver Storage Lockers">
-    </a>
+      <figcaption class="work-body-image-caption">
+        One of the lockers from Denver's program
+      </figcaption>
+    </figure>
 
     <p>
       Based on the narrow scope of existing solutions, we saw an opportunity for
@@ -230,7 +218,7 @@
 
     <p>
       In addition to the above questions, we also asked a number of questions
-      around the level of trust among the community, some methods of logistics,
+      about the level of trust within the community, the logistics and operations,
       and how communication is handled between residents in different scenarios.
     </p>
 
@@ -246,63 +234,58 @@
       tour and interview.
     </p>
 
-    <p>A long view of a corridor in Nickelsville Ballard</p>
-
-    <a
-      target="_blank"
-      href="">
+    <figure class="work-body-figure">
       <img
         src="../assets/images/work/uw-secure-storage-in-shelters/nickelsville-1a.png"
         class="work-body-image border"
-        alt="">
-    </a>
+        alt="Nickelsville Ballard">
+      <figcaption class="work-body-image-caption">
+        A long view of a corridor in Nickelsville Ballard
+      </figcaption>
+    </figure>
 
-    <p>This shed serves as the only communal storage area</p>
-
-    <a
-      target="_blank"
-      href="">
+    <figure class="work-body-figure">
       <img
         src="../assets/images/work/uw-secure-storage-in-shelters/nickelsville-2a.png"
         class="work-body-image border"
-        alt="">
-    </a>
+        alt="Nickelsville community storage">
+      <figcaption class="work-body-image-caption">
+        This shed serves as the only communal storage area in Nickelsville
+      </figcaption>
+    </figure>
 
-    <p>An enclosed area for cooking and relaxing</p>
-
-    <a
-      target="_blank"
-      href="">
+    <figure class="work-body-figure">
       <img
         src="../assets/images/work/uw-secure-storage-in-shelters/nickelsville-3a.png"
         class="work-body-image border"
-        alt="">
-    </a>
+        alt="Nickelsville cooking and relaxing area">
+      <figcaption class="work-body-image-caption">
+        An enclosed area for cooking and relaxing
+      </figcaption>
+    </figure>
 
-    <p>A semi-enclosed area for eating</p>
-
-    <a
-      target="_blank"
-      href="">
+    <figure class="work-body-figure">
       <img
         src="../assets/images/work/uw-secure-storage-in-shelters/nickelsville-4a.png"
         class="work-body-image border"
-        alt="">
-    </a>
+        alt="Nickelsville eating area">
+      <figcaption class="work-body-image-caption">
+        A semi-enclosed area for eating
+      </figcaption>
+    </figure>
 
-    <p>An uncovered structural support for another shelter</p>
-
-    <a
-      target="_blank"
-      href="">
+    <figure class="work-body-figure">
       <img
         src="../assets/images/work/uw-secure-storage-in-shelters/nickelsville-5a.png"
         class="work-body-image border"
-        alt="">
-    </a>
+        alt="Nickelsville unused structural support">
+      <figcaption class="work-body-image-caption">
+        An uncovered structural support for another shelter
+      </figcaption>
+    </figure>
 
     <p>
-      Our guide, Jamie, provided us a tour and answered our questions in an interview.
+      Our guide, Jamie, gave us a tour and answered our questions in an interview.
       From our interview with Jamie, we gained a much deeper understanding of the
       relationship residents have with their belongings and storage. Some of our
       takeaways included:
@@ -327,6 +310,14 @@
       </li>
     </ul>
 
+    <p>
+      One of my design ideas came from this field visit -- from seeing the
+      kind of structural supports depicted in the last picture above. Many of
+      the structures in the Nickelsville Ballard camp were fabricated from
+      a mix of skeletal supports (the kind of plastic, PVC type material shown),
+      and a simple waterproof exoskeleton, like a standard tarp. I knew I wanted
+      to explore this kind of structural, component-based system more.
+    </p>
 
   </div>
 
