minor updates to secure storage case study

--- a/src/assets/work-templates/uw-secure-storage-in-shelters.html
+++ b/src/assets/work-templates/uw-secure-storage-in-shelters.html
@@ -430,6 +430,28 @@
       </figcaption>
     </figure>
 
+    <p>
+      I wrote the following sections of the document:
+    </p>
+
+    <ul class="work-body-list">
+      <li>
+        The organization of the system, from the information architecture, to
+        the concepts around the basic data structures that might be involved
+        (pp. 6-9)
+      </li>
+      <li>
+        The "Interface and Interaction" section, and how the system could be used
+        (p. 9)
+      </li>
+      <li>
+        The wireframes, annotated with design rationales (pp. 10-17)
+      </li>
+      <li>
+        The brainstorm in the appendix, (pp. 19-20)
+      </li>
+    </ul>
+
   </div>
 
 </div>
