updating case studies

--- a/src/assets/work-templates/uw-oculus-rift-onboarding-in-3d.html
+++ b/src/assets/work-templates/uw-oculus-rift-onboarding-in-3d.html
@@ -1,41 +1,43 @@
 <div class="work-entry">
-
-  <div class="work-introduction">
-    <div class="work-metadata">
+  <div class="work-intro">
+    <div class="work-header">
       <div class="work-title">
-        Oculus Rift: Onboarding in a 3d Environment
+        Onbording with the Oculus Platform
       </div>
-      <div class="work-tags">
-        <ul>
-          <li class="work-tag">UX Research</li>
-          <li class="work-tag">Research Planning</li>
-          <li class="work-tag">Usability Testing</li>
-        </ul>
+
+      <div class="work-title-border"></div>
+
+      <div class="work-subtitle">
+        Conducting a usability test to evaluate first time user experiences
+        with the Oculus Touch motion-controllers
       </div>
     </div>
+
+    <ul class="work-tags">
+      <li class="work-tag">UX Research</li>
+      <li class="work-tag">Research Planning</li>
+      <li class="work-tag">Usability Testing</li>
+      <li class="work-tag">Qualitative Research</li>
+      <li class="work-tag">Quantitative Research</li>
+    </ul>
+
     <div class="work-description">
       <p>
-        We'll play with clouds today. Maybe there was an old trapper that lived out here
-        and maybe one day he went to check his beaver traps, and maybe he fell into the
-        river and drowned. Trees grow however makes them happy. Nice little fluffy clouds
-        laying around in the sky being lazy. Maybe he has a little friend that lives right
-        over here. Nice little clouds playing around in the sky. And I know you're saying,
-        'Oh Bob, you've done it this time.' And you may be right. Everyone wants to enjoy
-        the good parts - but you have to build the framework first.
+        In January 2018, I began a 3-month course in Usability Testing, and formed
+        a group with three others to explore user experience in VR.
+        We were interestd in exploring the Oculus Touch, the motion-controllers
+        that accompany the Oculus Rift. We were interested in understanding how
+        users would engage with software using a novel interface for the first time.
+      </p>
+      <p>
+        We decided to explore the onboarding experience through the use of two
+        applications: First Contact - the platforms primary onboarding experience,
+        and Tilt Brush - a 3d painting application.
       </p>
     </div>
-  </div>
 
+  </div>
   <div class="work-body">
-    <p>
-      We'll play with clouds today. Maybe there was an old trapper that lived out here
-      and maybe one day he went to check his beaver traps, and maybe he fell into the
-      river and drowned. Trees grow however makes them happy. Nice little fluffy clouds
-      laying around in the sky being lazy. Maybe he has a little friend that lives right
-      over here. Nice little clouds playing around in the sky. And I know you're saying,
-      'Oh Bob, you've done it this time.' And you may be right. Everyone wants to enjoy
-      the good parts - but you have to build the framework first.
-    </p>
   </div>
 
 </div>
