--- a/src/assets/work-templates/uw-secure-storage-in-shelters.html
+++ b/src/assets/work-templates/uw-secure-storage-in-shelters.html
@@ -9,7 +9,7 @@
 
       <div class="work-subtitle">
         Designing a user-centered solution to help homeless Seattle residents store
-        their possessions securely and sustainably.
+        their possessions securely and sustainably
       </div>
     </div>
 
@@ -32,10 +32,9 @@
         local region.
       </p>
       <p>
-        We selected a project that could resolve social, economic, and health
-        hazards for thousands of Seattle's citizens: design a user-centered
-        solution to help homeless Seattle residents store their possessions
-        securely and sustainably.
+        We selected a project that could aid thousands of Seattle's citizens:
+        design a user-centered solution to help homeless Seattle residents store
+        their possessions securely and sustainably.
       </p>
     </div>
 
@@ -78,7 +77,17 @@
     <p>
       As our group reviewed our findings and interviews, we decided to focus on
       designing sustainable storage solutions for Seattle's homeless populations.
+      We chose this opportunity space because it was small enough in scope for us
+      to explore, but large enough that it could provide benefits and peace of
+      mind to users:
     </p>
+
+    <ul class="work-body-list">
+      <li>With their possessions safe, users can travel more freely</li>
+      <li>Meet about social services with social workers and others</li>
+      <li>Travel to explore employment opportunities</li>
+      <li>Focus on ongoing tasks without worrying about loss prevention</li>
+    </ul>
 
     <h2 class="work-body-h2">
       Understanding the Domain
@@ -111,7 +120,7 @@
     <p>
       Beyond existing housing programs, we also wanted to understand the
       financial resources that the city puts towards homelessness. We
-      investigated how the budgetary resources are organized in Seattle. The
+      investigated how budgetary resources are organized in Seattle. The
       resources here, like in many cities, are scarce. But understanding the
       financial context was critical to designing a realistic solution.
     </p>
