--- a/src/assets/work-templates/uw-oculus-rift-onboarding-in-3d.html
+++ b/src/assets/work-templates/uw-oculus-rift-onboarding-in-3d.html
@@ -2,14 +2,14 @@
   <div class="work-intro">
     <div class="work-header">
       <div class="work-title">
-        Onbording with the Oculus Platform
+        On-boarding with the Oculus Platform
       </div>
 
       <div class="work-title-border"></div>
 
       <div class="work-subtitle">
         Conducting a usability test to evaluate first time user experiences
-        with the Oculus Touch motion-controllers
+        with Oculus Touch and motion-controlled software
       </div>
     </div>
 
@@ -23,21 +23,42 @@
 
     <div class="work-description">
       <p>
-        In January 2018, I began a 3-month course in Usability Testing, and formed
-        a group with three others to explore user experience in VR.
-        We were interestd in exploring the Oculus Touch, the motion-controllers
-        that accompany the Oculus Rift. We were interested in understanding how
-        users would engage with software using a novel interface for the first time.
+        In January 2018, I formed a group with three other graduate students to
+        develop and conduct a usability test. We were interested in testing a
+        product with a complex, novel interface &mdash; something that presented
+        different questions and opportunities than traditional web applications.
+        We decided to work with VR, specifically, the Oculus platform.
       </p>
       <p>
-        We decided to explore the onboarding experience through the use of two
-        applications: First Contact - the platforms primary onboarding experience,
-        and Tilt Brush - a 3d painting application.
+        We were interested in understanding how first-time users would grapple
+        with this new interface &mdash; what hurdles they would identify during
+        on-boarding, and how they would adapt and operate the system using a
+        foreign software interface.
       </p>
     </div>
 
   </div>
   <div class="work-body">
+
+    <h2 class="work-body-h2">
+      Heuristic Analysis
+    </h2>
+
+    <p>
+      At the outset of the project, we decided to focus on two applications on
+      the Oculus platform:
+    </p>
+
+    <ul class="work-body-list">
+      <li>First Contact: the Oculus Touch on-boarding application</li>
+      <li>Tilt Brush: a 3d design application</li>
+    </ul>
+
+    <p>
+      At the outset of the project, we decided to focus on two applications on
+      the Oculus platform:
+    </p>
+
   </div>
 
 </div>
