--- a/src/assets/work-templates/uw-secure-storage-in-shelters.html
+++ b/src/assets/work-templates/uw-secure-storage-in-shelters.html
@@ -53,7 +53,7 @@
     </p>
 
     <p>
-      Seattle's effort to address homelessness is significant - so much so that
+      Seattle's effort to address homelessness is significant &mdash; so much so that
       in late 2017, it was a primary topic of the ongoing mayoral race between
       Jenny Durkan and Cary Moon. Fortunately for us, this meant that it was
       also heavily spotlighted by local media. Our literature review focused on
@@ -140,7 +140,7 @@
     <p>
       Through literature review and secondary-source interviews, we came to align
       ourselves with a budgetary concept of <a class="work-body-link" target="_blank" href="https://www.desc.org/what-we-do/housing/housing-first/">
-      housing first</a> - the idea that the overwhelming majority of city funds
+      housing first</a> &mdash; the idea that the overwhelming majority of city funds
       should be put towards the creation of permanent housing solutions rather
       than stop-gap measures.
     </p>
@@ -148,7 +148,7 @@
     <p>
       As we progressed, we often asked ourselves, "is this solution worth more
       than a single permanent home?" Prioritizing "housing first," we knew our
-      solution would have to use resources responsibly - either through a low
+      solution would have to use resources responsibly &mdash; either through a low
       cost or through an easy method of scaling the resources required.
     </p>
 
@@ -202,7 +202,7 @@
     <p>
       In order to build an understanding of our potential design's users, we
       began planning outreach to residents of local shelters. We crafted two
-      surveys - one for shelter administrators and one for shelter residents -
+      surveys &mdash; one for shelter administrators and one for shelter residents &mdash;
       to get a sense of a variety of stakeholders for a storage-oriented project.
       Some of our questions for stakeholders included:
     </p>
@@ -311,7 +311,7 @@
         goods and the means to store them.
       </li>
       <li>
-        Jamie reiterated what our surveys found - residents have a lot of possessions,
+        Jamie reiterated what our surveys found &mdash; residents have a lot of possessions,
         often over 500 or 1000 liters.
       </li>
       <li>
@@ -320,7 +320,7 @@
     </ul>
 
     <p>
-      One of my design ideas came from this field visit -- from seeing the
+      One of my design ideas came from this field visit &mdash; from seeing the
       kind of structural supports depicted in the last picture above. Many of
       the structures in the Nickelsville Ballard camp were fabricated from
       a mix of skeletal supports (the kind of plastic, PVC type material shown),
@@ -461,6 +461,13 @@
       </li>
     </ul>
 
+  </div>
+
+  <div class="page-end-links">
+    <a
+      class="button-bright"
+      routerLink="/work"
+      href="">See All Work</a>
   </div>
 
 </div>
